[package]
name = "statements_archive"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tower-http = { version = "0.5.2", features = ["cors"] }
dotenvy = "0.15.7"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
reqwest = { version = "0.12.7", features = ["json"] }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
bcrypt = "0.15.0"
jsonwebtoken = "9.3.0"

diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
r2d2 = "0.8.10"
dotenv = "0.15.0"
